logs/pytroll-schedule.log
Listing '.'...
Listing './bin'...
Compiling './bin/generate_schedule_xmlpage.py'...
***   File "./bin/generate_schedule_xmlpage.py", line 81
    print child.attrib
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/configobj-5.0.6.egg-info'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pykdtree'...
Listing './lib/python3.5/site-packages/pykdtree-1.2.2.egg-info'...
Listing './lib/python3.5/site-packages/pyorbital'...
Compiling './lib/python3.5/site-packages/pyorbital/tbus.py'...
***   File "./lib/python3.5/site-packages/pyorbital/tbus.py", line 157
    print satellite
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyorbital/tbusold.py'...
***   File "./lib/python3.5/site-packages/pyorbital/tbusold.py", line 46
    print "spacecraft_id", p4l[:2]
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyorbital/test_geoloc.py'...
***   File "./lib/python3.5/site-packages/pyorbital/test_geoloc.py", line 97
    print "s_times", s_times.dtype
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyorbital/tle2intdes.py'...
***   File "./lib/python3.5/site-packages/pyorbital/tle2intdes.py", line 29
    print line.strip().replace(" ", "-", 1),
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyorbital-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pyproj'...
Listing './lib/python3.5/site-packages/pyproj/data'...
Listing './lib/python3.5/site-packages/pyproj-1.9.5.1.egg-info'...
Listing './lib/python3.5/site-packages/pyresample'...
Listing './lib/python3.5/site-packages/pyresample/bilinear'...
Listing './lib/python3.5/site-packages/pyresample/ewa'...
Listing './lib/python3.5/site-packages/pyresample/test'...
Listing './lib/python3.5/site-packages/pyresample-1.7.1.egg-info'...
Listing './lib/python3.5/site-packages/pytroll_schedule-0.3.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/trollsched'...
Compiling './lib/python3.5/site-packages/trollsched/combine.py'...
***   File "./lib/python3.5/site-packages/trollsched/combine.py", line 202
    print "len(passes_list)", len(passes_list), "   len(graph_set)", len(graph_set), "   statnr", statnr, "   p", p
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/trollsched/ftpaq.py'...
***   File "./lib/python3.5/site-packages/trollsched/ftpaq.py", line 46
    except (socket.error, socket.gaierror), e:
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/trollsched/satpass.py'...
***   File "./lib/python3.5/site-packages/trollsched/satpass.py", line 322
    except (socket.error, socket.gaierror), e:
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/trollsched/schedule.py'...
***   File "./lib/python3.5/site-packages/trollsched/schedule.py", line 612
    print "s", s
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
